<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profil_neighbour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.ProfilActivity">

    <ImageView
        android:id="@+id/profil_image_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/profil_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/profil_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginBottom="36dp"
        android:textSize="36dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:text="Caroline"
        app:layout_constraintBottom_toBottomOf="@id/profil_image_avatar"
        app:layout_constraintLeft_toLeftOf="@id/profil_image_avatar" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/profil_button_addFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profil_image_avatar"
        app:layout_constraintBottom_toTopOf="@+id/space1"
        android:layout_marginRight="20dp"
        app:backgroundTint="@color/colorWhite"
        app:srcCompat="@drawable/ic_star_border_yellow_24dp"
        android:scaleType="center" />


    <Space
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toBottomOf="@id/profil_image_avatar" />

    <TextView
        android:id="@id/profil_space1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/space1"
        app:layout_constraintTop_toTopOf="@id/space1"
        android:text="Caroline"/>

    <ImageView
        android:id="@+id/profil_space1_image_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/space1"
        app:layout_constraintTop_toBottomOf="@id/profil_space1_name"
        app:srcCompat="@drawable/ic_location" />

    <TextView
        android:id="@+id/profil_space1_text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@id/profil_space1_image_location"
        app:layout_constraintBottom_toBottomOf="@id/profil_space1_image_location"
        app:layout_constraintTop_toTopOf="@id/profil_space1_image_location"
        android:textSize="16dp" />


    <ImageView
        android:id="@+id/profil_space1_image_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/space1"
        app:layout_constraintTop_toBottomOf="@id/profil_space1_image_location"
        app:srcCompat="@drawable/ic_phone" />

    <TextView
        android:id="@+id/profil_space1_text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@id/profil_space1_image_phone"
        app:layout_constraintBottom_toBottomOf="@id/profil_space1_image_phone"
        app:layout_constraintTop_toTopOf="@id/profil_space1_image_phone"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/profil_space1_image_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/space1"
        app:layout_constraintTop_toBottomOf="@id/profil_space1_image_phone"
        app:srcCompat="@drawable/ic_language" />

    <TextView
        android:id="@+id/profil_space1_text_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@id/profil_space1_image_adress"
        app:layout_constraintBottom_toBottomOf="@id/profil_space1_image_adress"
        app:layout_constraintTop_toTopOf="@id/profil_space1_image_adress"
        android:textSize="16dp" />



    <Space
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toBottomOf="@id/space1" />

    <TextView
        android:id="@+id/profil_space2_text_aboutMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/space2"
        app:layout_constraintTop_toTopOf="@id/space2"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:textSize="28dp"
        android:textStyle="bold"
        android:text="A propos de moi" />

    <TextView
        android:id="@+id/profil_space2_text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/space2"
        app:layout_constraintTop_toBottomOf="@id/profil_space2_text_aboutMe"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="12dp"
        android:textSize="16dp"
        android:text="Plop je m'applle Gilou" />


</android.support.constraint.ConstraintLayout>